Improve error message when passing objects to flags

Instead of complaining that we don't know how to handle an unregistered
type from an object (unregistered because of a missing enum value in the
switch), recognize that for enum and flags types we expect a number,
and report a type mismatch.

https://bugzilla.gnome.org/show_bug.cgi?id=698182